--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,3 +29,5 @@
     # node
     ~/.nodenv: nodenv
     ~/.nodenv/plugins/node-build: node-build
+    ~/.nodenv/plugins/nodenv-aliases: nodenv-aliases
+    ~/.nodenv/plugins/nodenv-update: nodenv-update
