--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "nodenv-aliases"]
 	path = nodenv-aliases
 	url = https://github.com/nodenv/nodenv-aliases
+[submodule "rbenv"]
+	path = rbenv
+	url = https://github.com/rbenv/rbenv.git
+[submodule "ruby-build"]
+	path = ruby-build
+	url = https://github.com/rbenv/ruby-build
