Update node-build gitsubmodule to always track master
I noticed that whenever would run the dotfiles on a new machine, updates to some of these dependencies would get stuck, even though those projects had new commits. Following [this article](https://stackoverflow.com/questions/18770545/why-is-my-git-submodule-head-detached-from-master) helped me fix node-build

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,7 @@
 [submodule "node-build"]
 	path = node-build
 	url = https://github.com/nodenv/node-build.git
+	master = master
 [submodule "nodenv-update"]
 	path = nodenv-update
 	url = https://github.com/nodenv/nodenv-update
